--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,3 @@
-setuptools==68.0.0
-wheel==0.41.0
 Flask==2.3.3
 flask-cors==4.0.0
 requests==2.31.0
@@ -8,6 +6,5 @@ groq==0.4.2
 stripe==7.8.0
 gunicorn==21.2.0
 nltk==3.8.1
-numpy==1.24.3
-scipy==1.10.1
+beautifulsoup4==4.12.2
 scikit-learn==1.2.2
