--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,8 @@ Flask==2.3.3
 flask-cors==4.0.0
 requests==2.31.0
 python-dotenv==1.0.0
-groq==0.4.2
+groq==0.9.0
+httpx==0.25.0
 stripe==7.8.0
 gunicorn==21.2.0
 numpy==1.24.3
