--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ requests==2.31.0
 python-dotenv==1.0.0
 groq==0.9.0
 httpx==0.25.0
-stripe==7.8.0
+stripe>=8.0.0
 gunicorn==21.2.0
 numpy==1.24.3
 nltk==3.8.1
